--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
                                 Data Entry – PT PLN (Persero) (Komunikasi & TJSL) | Padang, Oktober 2024 – April 2025
                             </div>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Merekap seluruh link media PLN se-Sumbar: running text di
-                                    TV, YouTube, TVRI, hingga berita daerah</li>
+                                <li class="list-group-item">Merekap seluruh link media PLN se-Sumbar: TV Local, YouTube,
+                                    TVRI, hingga berita daerah</li>
                                 <li class="list-group-item">Mengelola data dalam jumlah besar untuk dokumentasi media
                                 </li>
                                 <li class="list-group-item">Membuat program otomatisasi rekap data dengan Python untuk
@@ -296,7 +296,7 @@
 
 
             </div>
-
+            <div class="circle2" data-aos="zoom-in" data-aos-duration="1500"></div>
         </div>
     </section>
 
@@ -370,6 +370,7 @@
             <div class="row mt-4 justify-content-center" data-aos="fade-up" data-aos-duration="1500">
                 <div class="col-md-5 pt-3">
                     <div class="card text-start col-12">
+                        <img src="img/project/weding.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h4 class="card-title text-center">Wedding
                                 <hr>
@@ -385,8 +386,9 @@
                 </div>
 
 
-                <div class="col-md-5 pt-3">
+                <!-- <div class="col-md-5 pt-3">
                     <div class="card text-start col-12 ">
+                        <img src="img/project/Portofolio.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h4 class="card-title text-center">Another
                                 <hr>
@@ -399,17 +401,18 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-md-5 pt-3">
                     <div class="card text-start col-12 ">
+                        <img src="img/project/SPK-AHP.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h4 class="card-title text-center">SPK AHP
                                 <hr>
                             </h4>
                             <div class="list-group">
-                                <a href="https://naufalhafid.github.io/portofolio" target="_blank"
+                                <a href="https://naufalhafid.github.io/" target="_blank"
                                     class="list-group-item list-group-item-action text-center">
-                                    Portofolio
+                                    Coming Soon
                                 </a>
                             </div>
                         </div>
@@ -417,14 +420,15 @@
                 </div>
                 <div class="col-md-5 pt-3">
                     <div class="card text-start col-12 ">
+                        <img src="img/project/SPK-SAW.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h4 class="card-title text-center">SPK SAW
                                 <hr>
                             </h4>
                             <div class="list-group">
-                                <a href="https://naufalhafid.github.io/portofolio" target="_blank"
+                                <a href="https://naufalhafid.github.io/" target="_blank"
                                     class="list-group-item list-group-item-action text-center">
-                                    Portofolio
+                                    Coming Soon
                                 </a>
                             </div>
                         </div>
@@ -432,6 +436,23 @@
                 </div>
                 <div class="col-md-5 pt-3">
                     <div class="card text-start col-12 ">
+                        <img src="img/project/KASIR.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h4 class="card-title text-center">Website Kasir
+                                <hr>
+                            </h4>
+                            <div class="list-group">
+                                <a href="https://naufalhafid.github.io/" target="_blank"
+                                    class="list-group-item list-group-item-action text-center">
+                                    Coming Soon
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-5 pt-3">
+                    <div class="card text-start col-12 ">
+                        <img src="img/project/warmncozy.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h4 class="card-title text-center">Food
                                 <hr>
@@ -452,6 +473,7 @@
                 </div>
                 <div class="col-md-5 pt-3">
                     <div class="card text-start col-12 ">
+                        <img src="img/project/wibutoon.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h4 class="card-title text-center">Fan Page Anime
                                 <hr>
@@ -555,6 +577,7 @@
 
     <footer class="footer">
         <div class="container">
+            <div class="circle2" data-aos="zoom-in" data-aos-duration="1500"></div>
             <div class="row">
                 <div class="col-lg-6 ">
                     <p class="text-center" data-aos="fade-up" data-aos-duration="1500">Didesign dan dibut menggunakan:
@@ -572,6 +595,7 @@
                             Hafid</a> </p>
                 </div>
             </div>
+
         </div>
     </footer>
 
