--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                 <hr>
                             </h4>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Permain Game</li>
+                                <li class="list-group-item">Gaming</li>
                                 <li class="list-group-item">Menonton Film</li>
                                 <li class="list-group-item">Hal membosankan lainnya</li>
                             </ul>
@@ -377,7 +377,8 @@
                             </h4>
                             <div class="list-group">
                                 <a href="https://naufalhafid.github.io/Haci" target="_blank"
-                                    class="list-group-item list-group-item-action text-center">
+                                    class="list-group-item list-group-item-action web text-center">
+                                    <i class="bi bi-globe2"></i>
                                     Haci
                                 </a>
                             </div>
@@ -406,13 +407,14 @@
                     <div class="card text-start col-12 ">
                         <img src="img/project/SPK-AHP.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h4 class="card-title text-center">SPK AHP
+                            <h4 class="card-title text-center">Sistem Penunjang Keputusan AHP
                                 <hr>
                             </h4>
                             <div class="list-group">
-                                <a href="https://naufalhafid.github.io/" target="_blank"
-                                    class="list-group-item list-group-item-action text-center">
-                                    Coming Soon
+                                <a href="https://github.com/NaufalHafid/SPK-AHP" target="_blank"
+                                    class="list-group-item list-group-item-action github text-center">
+                                    <i class="bi bi-github"></i>
+                                    Github SPK BANSOS
                                 </a>
                             </div>
                         </div>
@@ -422,13 +424,14 @@
                     <div class="card text-start col-12 ">
                         <img src="img/project/SPK-SAW.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h4 class="card-title text-center">SPK SAW
+                            <h4 class="card-title text-center">Sistem Penunjnag Keputusan SAW
                                 <hr>
                             </h4>
                             <div class="list-group">
-                                <a href="https://naufalhafid.github.io/" target="_blank"
-                                    class="list-group-item list-group-item-action text-center">
-                                    Coming Soon
+                                <a href="https://github.com/NaufalHafid/SPK-SAW" target="_blank"
+                                    class="list-group-item list-group-item-action github text-center">
+                                    <i class="bi bi-github"></i>
+                                    Github SPK Penentuan Jurusan Kuliah
                                 </a>
                             </div>
                         </div>
@@ -442,9 +445,10 @@
                                 <hr>
                             </h4>
                             <div class="list-group">
-                                <a href="https://naufalhafid.github.io/" target="_blank"
-                                    class="list-group-item list-group-item-action text-center">
-                                    Coming Soon
+                                <a href="https://github.com/NaufalHafid/KASIR-Bengkel-Motor" target="_blank"
+                                    class="list-group-item list-group-item-action github text-center">
+                                    <i class="bi bi-github"></i>
+                                    Github Website Kasir
                                 </a>
                             </div>
                         </div>
@@ -459,7 +463,8 @@
                             </h4>
                             <div class="list-group">
                                 <a href="https://naufalhafid.github.io/warmncozy" target="_blank"
-                                    class="list-group-item list-group-item-action text-center">
+                                    class="list-group-item list-group-item-action web text-center">
+                                    <i class="bi bi-globe2"></i>
                                     Warm & Cozy
                                 </a>
                                 <a href="https://instagram.com/warm_ncozy" target="_blank"
