update animation project

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                 </div>
             </div>
             <div class="row mt-4 justify-content-center" data-aos="fade-up" data-aos-duration="1500">
-                <div class="col-md-5 pt-3">
+                <div class="col-md-5 pt-3" data-aos="fade-up" data-aos-duration="1500">
                     <div class="card text-start col-12">
                         <img src="img/project/weding.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -403,7 +403,7 @@
                         </div>
                     </div>
                 </div> -->
-                <div class="col-md-5 pt-3">
+                <div class="col-md-5 pt-3" data-aos="fade-up" data-aos-duration="1500">
                     <div class="card text-start col-12 ">
                         <img src="img/project/SPK-AHP.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -420,7 +420,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-5 pt-3">
+                <div class="col-md-5 pt-3" data-aos="fade-up" data-aos-duration="1500">
                     <div class="card text-start col-12 ">
                         <img src="img/project/SPK-SAW.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -437,7 +437,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-5 pt-3">
+                <div class="col-md-5 pt-3" data-aos="fade-up" data-aos-duration="1500">
                     <div class="card text-start col-12 ">
                         <img src="img/project/KASIR.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -454,7 +454,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-5 pt-3">
+                <div class="col-md-5 pt-3" data-aos="fade-up" data-aos-duration="1500">
                     <div class="card text-start col-12 ">
                         <img src="img/project/warmncozy.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -476,7 +476,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-5 pt-3">
+                <div class="col-md-5 pt-3" data-aos="fade-up" data-aos-duration="1500">
                     <div class="card text-start col-12 ">
                         <img src="img/project/wibutoon.png" class="card-img-top" alt="...">
                         <div class="card-body">
